--- a/RPG Battle Game/css/estadisticas.css
+++ b/RPG Battle Game/css/estadisticas.css
@@ -69,7 +69,7 @@
 /** Seccion de poderes */
 
 .esenarioEquipo1 {
-  .seccionPoder {
+  .seccionestadisticas {
     width: 72%;
     /* height: 50px; */
     border: 1px solid rgba(0, 0, 0, 0.598);
@@ -77,10 +77,6 @@
     top: 7px;
     left: 0px;
     display: flex;
-
-  
-
-  
 
     .poder {
       /* border: 1px solid red; */
@@ -93,63 +89,54 @@
       justify-content: center;
       align-items: center;
 
-      i{
+      i {
         color: white;
         margin-right: 10px;
       }
 
-      p{
+      p {
         color: rgb(255, 255, 255);
         font-size: 14px;
         font-weight: bold;
       }
-
-   
     }
   }
 }
 
 .esenarioEquipo2 {
-  .seccionPoder {
+  .seccionestadisticas {
     width: 72%;
     /* height: 50px; */
     border: 1px solid black;
     position: absolute;
     top: 7px;
-    left:55px;
+    left: 55px;
     display: flex;
-
-
-
 
     .poder {
       /* border: 1px solid red; */
       width: 80%;
       height: 25px;
       /* border-radius: 50%; */
-      background: rgba(82, 117, 88, 0.516);
+      background: rgb(82, 115, 117);
       overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
 
-      i{
+      i {
         color: white;
         margin-right: 10px;
       }
 
-      p{
+      p {
         color: white;
         font-size: 14px;
         font-weight: bold;
       }
-
-   
     }
   }
 }
-
-
 
 /** Seccion condicion */
 .esenarioEquipo1 {
