--- a/RPG Battle Game/css/main.css
+++ b/RPG Battle Game/css/main.css
@@ -126,3 +126,23 @@ body {
 .turnoEquipo2 {
   left: 380px;
 }
+
+.cinema{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgb(255,255,255);
+  z-index: 100;
+  background: radial-gradient(circle, rgba(255,255,255,0) 51%, rgb(5, 5, 5) 110%);
+  pointer-events: none; 
+  display: flex;
+  opacity: 0;
+  transition: opacity 1.5s ease-in;
+}
+
+.cinema.active{
+  transition: opacity 1s ease-in;
+  display: flex;
+  opacity: 1;
+  pointer-events: none;
+}
