--- a/RPG Battle Game/css/escenarioEquipo1.css
+++ b/RPG Battle Game/css/escenarioEquipo1.css
@@ -105,19 +105,19 @@
     }
   }
 
-  .p1 {
+  .lugar1 {
     position: absolute;
     top: 460px;
     left: 390px;
   }
 
-  .p2 {
+  .lugar2 {
     position: absolute;
     top: 285px;
     left: 320px;
   }
 
-  .p3 {
+  .lugar3 {
     position: absolute;
     top: 180px;
     left: 430px;
