--- a/RPG Battle Game/css/escenarioEquipo2.css
+++ b/RPG Battle Game/css/escenarioEquipo2.css
@@ -81,43 +81,24 @@
   }
 }
 
-.p4 {
+.lugar4 {
   position: absolute;
 
   top: 450px;
   left: -100px;
 }
 
-.p5 {
+.lugar5 {
   position: absolute;
 
   top: 300px;
   left: -50px;
 }
 
-.p6 {
+.lugar6 {
   position: absolute;
 
   top: 190px;
   left: -120px;
 }
 
-.shadow_right {
-  position: absolute;
-  bottom: 0;
-  left: 80%;
-  transform: translateX(-50%) rotateX(75deg);
-  width: 120px; /* ajusta para el tamaño de la sombra */
-  height: 75px; /* la mitad del ancho para mantener proporción */
-  background: radial-gradient(
-    ellipse at center,
-    rgba(0, 0, 0, 0.63),
-    transparent
-  );
-  background: radial-gradient(
-    ellipse at center,
-    rgba(0, 0, 0, 0.6),
-    transparent 70%
-  );
-  border-radius: 50%;
-}
