--- a/TeachVideoGame/FrontEnd/stylesheets/equipo1.css
+++ b/TeachVideoGame/FrontEnd/stylesheets/equipo1.css
@@ -4,3 +4,42 @@
     border: 1px solid blue;
     position: relative;
 }
+
+
+.escenario__equipo1 .personaje{
+    border: 1px solid rgb(30, 221, 30);
+}
+
+
+.lugar1{
+    border: 1px solid #000;
+    right: 120px;
+    bottom: 0;
+}
+
+.lugar2{
+    border: 1px solid #11ac03b4;
+    right: 200px;
+    bottom: 150px;
+    
+}
+
+.lugar3{
+    border: 1px solid #120fbeb4;
+    right: 120px;
+    bottom: 300px;
+    
+}
+
+
+.escenario__equipo1 .ubicacionPersonajePrincipal{
+    right: 0;
+    top: 0;
+}
+.escenario__equipo1 .ubicacionPersonajeEnemigo{
+    right: -110px;
+    top: 0;
+}
+
+
+
