--- a/TeachVideoGame/FrontEnd/stylesheets/index.css
+++ b/TeachVideoGame/FrontEnd/stylesheets/index.css
@@ -1,98 +1,180 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
-    /* Evitar seleccon de elmentos */
-    user-select: none;
-    -moz-user-select: none; 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* Evitar seleccon de elmentos */
+  user-select: none;
+  -moz-user-select: none;
 }
 
-
-
-
-body{
-    margin: 0px auto;
-    width: 1500px;
-    height: 700px;
+body {
+  margin: 0px auto;
+  width: 1600px;
+  height: 800px;
 }
 
+.escenario {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border: 5px solid red;
+  display: flex;
+  overflow: hidden;
+}
 
-.escenario{
+.fondo {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #a7a7a7;
+
+  .imagenFondo {
     width: 100%;
-    height: 100%;
-    position: relative;
-    border: 5px solid red;
-    display: flex;
-    overflow: hidden;
-
-    img{
-        width: 100%;
-        position: absolute;
-        bottom:  0;
-    }
+    position: absolute;
+    bottom: -140px;
+  }
 }
 
+.personaje {
+  position: absolute;
+  width: 400px;
+  height: 150px;
+}
 
-.fondo{
+.ubicacionPersonajePrincipal {
+  height: 100%;
+  width: 150px;
+  /* border: 1px solid #028f49; */
+  position: absolute;
+  right: 0;
+  top: 0;
+
+  img {
     width: 100%;
-    height: 100%;
-    position: absolute;
-    background: #a7a7a7;
-} 
-
-
-.personaje{
-    position: absolute;
-    border: 1px solid black;
-    width: 400px;;
-    height: 150px;
+  }
 }
 
-
-
-.ubicacionPersonajePrincipal{
-    height: 100%;
-    width: 150px;
-    border: 1px solid #028f49;
-    background: #03945c9a;
-    position: absolute;
-    right: 0;
-    top: 0;
-    
+.ubicacionPersonajeEnemigo {
+  height: 100%;
+  width: 150px;
+  /* border: 1px solid #8f0202; */
+  /* background: #9403039a; */
+  position: absolute;
 }
 
-.ubicacionPersonajeEnemigo{
-    height: 100%;
-    width: 150px;
-    border: 1px solid #8f0202;
-    background: #9403039a;
-    position: absolute;
-    
-}
-    
 .contenedor_barraVida {
-    width: 250px;
-    height: 20px;
-    border: 1px solid #2c2c2c;
-    position: relative;
-    border-radius: 16px;
-    background: #6d6d6dc5;
-    
-    
-    
+  position: relative;
+  width: 52%;
+  height: 10px;
+  background: rgb(135, 135, 135);
+  border: 0.5px solid black;
+  border-radius: 10px;
+  opacity: 0.8;
 }
 
-.porcentajeVida{
-    display: block  ;
-    width: 70%;
-    height: 100%;
-    background: #1ab422c5;
-    border-radius: 16px;
-    
+.porcentajeVida {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 70%;
+  height: 100%;
+  border-radius: 16px;
+  background: #1ab422c5;
+  transition: width 0.6s ease-in-out;
 }
-.numeroPorcentaje{
-    color: white;
+
+.numeroPorcentaje {
+  color: white;
+  position: absolute;
+  top: -20px;
+}
+
+.seccionestadisticas {
+  width: 40%;
+  border: 1px solid rgba(0, 0, 0, 0.598);
+  position: absolute;
+  display: flex;
+
+  .poder {
+    width: 80%;
+    height: 30px;
+    background: rgb(82, 117, 88);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    i {
+      color: white;
+      margin-right: 10px;
+    }
+
+    p {
+      color: rgb(255, 255, 255);
+      font-size: 14px;
+      font-weight: bold;
+    }
+  }
+}
+
+.seccionCondicion {
+  position: absolute;
+  width: auto;
+  height: 30px;
+  padding: 2px;
+
+  display: flex;
+  justify-content: flex-end; /* Asegurar que los elementos se alineen al final */
+  align-items: flex-end;
+  /* transform-origin: right; */
+}
+
+.condicionNegativas {
+  background: rgba(242, 0, 0, 0.502);
+  width: auto;
+  height: 30px;
+  border: 1px solid rgb(123, 19, 19);
+  position: relative;
+  left: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.condicionPositivas {
+  background: rgba(0, 141, 242, 0.604);
+  width: auto;
+  height: 30px;
+  border: 1px solid rgba(4, 77, 129, 0.502);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.condicion {
+  margin: 5px 10px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+
+  p {
+    width: 20px;
+    height: 20px;
     position: absolute;
-    top: -20px;
+    top: -28px;
+    font-size: 12px;
+    color: rgb(199, 226, 78);
+    /* border: 1px solid rgb(255, 255, 255); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* background: rgba(0, 0, 0, 0.443); */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.544);
+    border-radius: 50%;
+  }
 }
